--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
-  "name": "@esjayeff/currency-converter",
-  "version": "1.0.0",
+  "name": "esjayeff-currency-converter",
+  "version": "1.0.1",
   "description": "\"# currency-converter\"",
   "main": "index.js",
   "type": "module",
-   "scripts": {
+  "bin":
+  {
+    "convme":"./index.js"
+  }, 
+    "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
